fix layout bugs

--- a/src/components/Breakfast/styles.css
+++ b/src/components/Breakfast/styles.css
@@ -6,7 +6,7 @@
 
 .breakfast-title  {
   font-family: 'Patrick Hand', cursive;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: rgb(78, 76, 65);
   padding: 10px 0 10px 20px;
   text-align: center;
