--- a/src/components/Lunch/styles.css
+++ b/src/components/Lunch/styles.css
@@ -7,7 +7,7 @@
 .lunch-subtitle {
   font-family: 'Dosis', sans-serif;
   color: #36342A;
-  font-size: 1.4em;
+  font-size: 1em;
   font-weight: bold;
   text-align: center;
   margin: 10px 0 0 0;
@@ -15,7 +15,7 @@
 
 .lunch-title  {
   font-family: 'Patrick Hand', cursive;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: rgb(78, 76, 65);
   padding: 10px 0 10px 20px;
   text-align: center;
